--- a/.classpath
+++ b/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="json-java.jar">
+	<classpathentry kind="lib" path="freemarker.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="freemarker.jar">
+	<classpathentry kind="lib" path="jsonJava.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
